Issue 1276: Break on error without message in status bar;  put error message on the right hand end of the executable line
http://code.google.com/p/fbug/source/detail?r=1409

--- a/extension/skin/classic/debugger.css
+++ b/extension/skin/classic/debugger.css
@@ -102,6 +102,14 @@
     background-image: url(chrome://firebug/skin/breakpoint.png);
 }
 
+.breakingError {
+	text-align: right;
+	float:right;
+	color: red;
+	margin-right: 1ex;
+}
+
+
 /************************************************************************************************/
 
 .conditionEditor {
